# pydokoro

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
docker/django/: Dockerfile  entrypoint.sh
pydokoro/: asgi.py  index.html  manage.py  settings.py  urls.py  wsgi.py
pydokoro/apps/authorization/: serializers.py  urls.py  views.py
pydokoro/apps/projects/: models.py  serializers.py  urls.py  views.py
pydokoro/apps/projects/migrations/: 0001_initial.py
pydokoro/home/: views.py
pydokoro/pydokoro/: urls.py
pydokoro/pydokoro/settings/: common.py  production.py
pydokoro/pydokoro/templates/: index.html
pydokoro/settings/: development.py  production.py
templates/: index.html
